--- a/src/App.css
+++ b/src/App.css
@@ -264,16 +264,23 @@ a{
 .about img{
     width: 90%;
 }
-.about-text h1{
-  background: linear-gradient(to right,#eac688, #eac688,  #5e4a29);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+.about-title{
+    background: linear-gradient(to right,#eac688, #eac688,  #5e4a29);
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent;
     font-size: 60px;
     margin: 0%;
     font-weight: 900;
 }
+.about-subtitle{
+    background: linear-gradient(to right,#eac688, #eac688,  #5e4a29);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 20px;
+}
 .about-text p{
     color: #929292;
+    
    
 }
 /* FOOTER  */
@@ -451,7 +458,7 @@ a{
     }
  }
  @media only screen and  (max-width : 1200px){
-
+    
     
      .nav-bar{
         margin: 0 auto; 
@@ -495,12 +502,16 @@ a{
     .about img{
         width: 90%;
     }
-    .about-text h1{
+    .about-titles{
         font-size: 40px;
     }
-    .about-text p{
-        font-size: 10px;
+    .about-subtitle{
+        font-size: 15px;
     }
+    .about-text p{
+        font-size: 12px;
+    }
+
     .single-property-title{
         font-size: 80px;
         top: 15%;
@@ -548,7 +559,7 @@ a{
         width: 50%;
     }
     .contact{
-        padding-top: 10%;
+        padding-top: 80%;
         line-height: 20px;
         font-size: 10px;
     }
@@ -556,7 +567,7 @@ a{
         padding: 0;
     }
     .our-promises{
-        padding-top: 10%;
+        padding-top: 80%;
         line-height: 20px;
         font-size: 10px;
     }
@@ -567,7 +578,7 @@ a{
         padding: 0;
     }
     .our-social{
-        padding-top: 10%;
+        padding-top: 80%;
         line-height: 20px;
         font-size: 10px;
     }
@@ -605,6 +616,12 @@ a{
 }
 .gallery-title{
     font-size: 30px;
+}
+.about-subtitle{
+    font-size: 8px;
+}
+.about-title{
+    font-size: 40px;
 }
 
 }
